build/parser.output
Terminales no usados en la gramática

    TOKEN_DBYTE
    TOKEN_DSHORT
    TOKEN_DLONG


Estado 10 conflictos: 1 desplazamiento/reducción
Estado 96 conflictos: 1 desplazamiento/reducción
Estado 230 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: s $end

    1 s: lSentencia

    2 lSentencia: lSentencia instruccion
    3           | instruccion

    4 instruccion: if_statement
    5            | switch_statement
    6            | break_statement
    7            | while_statement
    8            | for_statement
    9            | for_each_statement
   10            | imprimir ';'
   11            | bloque
   12            | declaracion_var ';'
   13            | funcion_declaracion
   14            | main_declaracion
   15            | return_stmt ';'
   16            | asignacion ';'
   17            | asignacion_elemento ';'
   18            | postfix ';'
   19            | continue_statement

   20 if_statement: TOKEN_IF '(' expr ')' bloque
   21             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE bloque
   22             | TOKEN_IF '(' expr ')' bloque TOKEN_ELSE if_statement
   23             | TOKEN_IF '(' expr ')' instruccion_simple ';'
   24             | TOKEN_IF '(' expr ')' instruccion_simple ';' TOKEN_ELSE bloque
   25             | TOKEN_IF '(' expr ')' instruccion_simple ';' TOKEN_ELSE if_statement

   26 switch_statement: TOKEN_SWITCH '(' expr ')' '{' case_list '}'
   27                 | TOKEN_SWITCH '(' expr ')' '{' case_list default_case '}'

   28 while_statement: TOKEN_WHILE '(' expr ')' bloque
   29                | TOKEN_WHILE '(' expr ')' instruccion_simple

   30 for_statement: TOKEN_FOR '(' declaracion_var ';' expr ';' incremento ')' bloque_for
   31              | TOKEN_FOR '(' declaracion_var ';' expr ';' incremento ')' instruccion_simple
   32              | TOKEN_FOR '(' declaracion_var ';' expr ';' ')' bloque_for
   33              | TOKEN_FOR '(' declaracion_var ';' expr ';' ')' instruccion_simple
   34              | TOKEN_FOR '(' asignacion ';' expr ';' incremento ')' bloque
   35              | TOKEN_FOR '(' asignacion ';' expr ';' incremento ')' instruccion_simple

   36 incremento: asignacion
   37           | TOKEN_IDENTIFIER TOKEN_PLUS_PLUS
   38           | TOKEN_IDENTIFIER TOKEN_MINUS_MINUS

   39 case_list: case_item
   40          | case_list case_item

   41 case_item: TOKEN_CASE expr ':' instrucciones_case
   42          | TOKEN_CASE expr ':' instrucciones_case TOKEN_BREAK ';'

   43 instrucciones_case: instruccion_case
   44                   | instrucciones_case instruccion_case

   45 instruccion_case: imprimir ';'
   46                 | bloque
   47                 | declaracion_var ';'
   48                 | asignacion ';'

   49 default_case: TOKEN_DEFAULT ':' instrucciones_case
   50             | TOKEN_DEFAULT ':' instrucciones_case TOKEN_BREAK ';'

   51 break_statement: TOKEN_BREAK ';'

   52 continue_statement: TOKEN_CONTINUE ';'

   53 instruccion_simple: imprimir
   54                   | declaracion_var
   55                   | asignacion

   56 asignacion: TOKEN_IDENTIFIER '=' expr
   57           | TOKEN_IDENTIFIER TOKEN_PLUS_ASSIGN expr
   58           | TOKEN_IDENTIFIER TOKEN_MINUS_ASSIGN expr
   59           | TOKEN_IDENTIFIER TOKEN_MUL_ASSIGN expr
   60           | TOKEN_IDENTIFIER TOKEN_DIV_ASSIGN expr
   61           | TOKEN_IDENTIFIER TOKEN_MOD_ASSIGN expr
   62           | TOKEN_IDENTIFIER TOKEN_AND_ASSIGN expr
   63           | TOKEN_IDENTIFIER TOKEN_OR_ASSIGN expr
   64           | TOKEN_IDENTIFIER TOKEN_XOR_ASSIGN expr
   65           | TOKEN_IDENTIFIER TOKEN_SHL_ASSIGN expr
   66           | TOKEN_IDENTIFIER TOKEN_SHR_ASSIGN expr

   67 lista_Expr: lista_Expr ',' expr
   68           | expr

   69 imprimir: TOKEN_PRINT '(' lista_Expr ')'
   70         | TOKEN_SYSTEM_OUT_PRINTLN '(' lista_Expr ')'

   71 bloque: '{' lSentencia '}'

   72 bloque_for: '{' lSentencia '}'

   73 declaracion_var: prefix_array_decl
   74                | postfix_array_decl
   75                | final_prefix_array_decl
   76                | final_postfix_array_decl
   77                | var_decl
   78                | final_var_decl

   79 $@1: ε

   80 prefix_array_decl: tipoPrimitivo prefix_dims TOKEN_IDENTIFIER $@1 array_prefix_init_opt

   81 $@2: ε

   82 postfix_array_decl: tipoPrimitivo TOKEN_IDENTIFIER postfix_dims $@2 array_postfix_init_opt

   83 $@3: ε

   84 final_prefix_array_decl: TOKEN_FINAL tipoPrimitivo prefix_dims TOKEN_IDENTIFIER $@3 array_prefix_init_opt

   85 $@4: ε

   86 final_postfix_array_decl: TOKEN_FINAL tipoPrimitivo TOKEN_IDENTIFIER postfix_dims $@4 array_postfix_init_opt

   87 var_decl: tipoPrimitivo TOKEN_IDENTIFIER '=' expr
   88         | tipoPrimitivo TOKEN_IDENTIFIER

   89 final_var_decl: TOKEN_FINAL tipoPrimitivo TOKEN_IDENTIFIER '=' expr

   90 array_prefix_init_opt: ε
   91                      | '=' TOKEN_NEW tipoPrimitivo dims_expr_list
   92                      | '=' '{' lista_Expr '}'
   93                      | '=' '{' filas_lista '}'
   94                      | '=' '{' lista_bloques2D '}'
   95                      | '=' '{' '}'
   96                      | '=' expr

   97 array_postfix_init_opt: array_prefix_init_opt

   98 prefix_dims: '[' ']'
   99            | prefix_dims '[' ']'

  100 postfix_dims: '[' ']'
  101             | postfix_dims '[' ']'

  102 dims_expr_list: '[' expr ']'
  103               | dims_expr_list '[' expr ']'

  104 lista_bloques2D: bloque2D
  105                | lista_bloques2D ',' bloque2D

  106 bloque2D: '{' filas_lista '}'

  107 filas_lista: fila_matriz
  108            | filas_lista ',' fila_matriz

  109 fila_matriz: '{' lista_Expr '}'

  110 asignacion_elemento: TOKEN_IDENTIFIER indices_una '=' expr
  111                    | TOKEN_IDENTIFIER indices_multi '=' expr

  112 indices_una: '[' expr ']'

  113 indices_multi: indices_una indices_una
  114              | indices_multi indices_una

  115 expr: expr '+' expr
  116     | expr '-' expr
  117     | expr '*' expr
  118     | expr '/' expr
  119     | expr '%' expr
  120     | expr '&' expr
  121     | expr '|' expr
  122     | expr '^' expr
  123     | expr TOKEN_SHIFT_LEFT expr
  124     | expr TOKEN_SHIFT_RIGHT expr
  125     | expr TOKEN_EQUAL expr
  126     | expr TOKEN_NOT_EQUAL expr
  127     | expr TOKEN_GREATER expr
  128     | expr TOKEN_LESS expr
  129     | expr TOKEN_GREATER_EQUAL expr
  130     | expr TOKEN_LESS_EQUAL expr
  131     | expr TOKEN_AND expr
  132     | expr TOKEN_OR expr
  133     | TOKEN_NOT expr
  134     | '-' expr
  135     | postfix

  136 postfix: unary
  137        | postfix '[' expr ']'
  138        | postfix '.' TOKEN_LENGTH
  139        | postfix '.' TOKEN_ADD '(' expr ')'
  140        | postfix '.' TOKEN_IDENTIFIER '(' expr ')'
  141        | postfix '.' TOKEN_IDENTIFIER '(' ')'
  142        | TOKEN_IDENTIFIER TOKEN_PLUS_PLUS
  143        | TOKEN_IDENTIFIER TOKEN_MINUS_MINUS

  144 unary: atom
  145      | '(' tipoPrimitivo ')' unary

  146 atom: primitivo
  147     | '(' expr ')'
  148     | TOKEN_IDENTIFIER
  149     | llamada_funcion
  150     | TOKEN_ARRAYS '.' TOKEN_INDEXOF '(' expr ',' expr ')'
  151     | TOKEN_INTEGER_CLASS '.' TOKEN_PARSE_INT '(' expr ')'
  152     | TOKEN_DOUBLE_CLASS '.' TOKEN_PARSE_DOUBLE '(' expr ')'
  153     | TOKEN_FLOAT_CLASS '.' TOKEN_PARSE_FLOAT '(' expr ')'
  154     | TOKEN_DSTRING '.' TOKEN_VALUE_OF '(' expr ')'
  155     | TOKEN_DSTRING '.' TOKEN_JOIN '(' expr ',' expr ')'
  156     | TOKEN_DSTRING '.' TOKEN_JOIN '(' expr ',' join_variadic_args ')'

  157 join_variadic_args: expr ',' lista_Expr

  158 primitivo: TOKEN_UNSIGNED_INTEGER
  159          | TOKEN_STRING
  160          | TOKEN_REAL_FLOAT
  161          | TOKEN_REAL
  162          | TOKEN_CHAR_LITERAL
  163          | TOKEN_TRUE
  164          | TOKEN_FALSE

  165 tipoPrimitivo: TOKEN_DINT
  166              | TOKEN_DFLOAT
  167              | TOKEN_DDOUBLE
  168              | TOKEN_DSTRING
  169              | TOKEN_DBOOLEAN
  170              | TOKEN_DCHAR
  171              | TOKEN_DVOID

  172 funcion_declaracion: tipoPrimitivo TOKEN_IDENTIFIER '(' param_opt ')' bloque

  173 main_declaracion: TOKEN_PUBLIC TOKEN_STATIC TOKEN_DVOID TOKEN_IDENTIFIER '(' main_params_opt ')' bloque

  174 main_params_opt: ε
  175                | main_params

  176 main_params: main_param
  177            | main_params ',' main_param

  178 main_param: tipoPrimitivo main_param_array_brackets TOKEN_IDENTIFIER

  179 main_param_array_brackets: ε
  180                          | main_param_array_brackets '[' ']'

  181 param_opt: ε
  182          | lista_parametros

  183 lista_parametros: tipoPrimitivo TOKEN_IDENTIFIER
  184                 | lista_parametros ',' tipoPrimitivo TOKEN_IDENTIFIER

  185 return_stmt: TOKEN_RETURN
  186            | TOKEN_RETURN expr

  187 for_each_statement: TOKEN_FOR '(' tipoPrimitivo TOKEN_IDENTIFIER ':' TOKEN_IDENTIFIER ')' bloque

  188 argumentos_opt: ε
  189               | lista_Expr

  190 llamada_funcion: TOKEN_IDENTIFIER '(' argumentos_opt ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '%' (37) 119
    '&' (38) 120
    '(' (40) 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 69 70 139 140 141 145 147 150 151 152 153 154 155 156 172 173 187 190
    ')' (41) 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 69 70 139 140 141 145 147 150 151 152 153 154 155 156 172 173 187 190
    '*' (42) 117
    '+' (43) 115
    ',' (44) 67 105 108 150 155 156 157 177 184
    '-' (45) 116 134
    '.' (46) 138 139 140 141 150 151 152 153 154 155 156
    '/' (47) 118
    ':' (58) 41 42 49 50 187
    ';' (59) 10 12 15 16 17 18 23 24 25 30 31 32 33 34 35 42 45 47 48 50 51 52
    '=' (61) 56 87 89 91 92 93 94 95 96 110 111
    '[' (91) 98 99 100 101 102 103 112 137 180
    ']' (93) 98 99 100 101 102 103 112 137 180
    '^' (94) 122
    '{' (123) 26 27 71 72 92 93 94 95 106 109
    '|' (124) 121
    '}' (125) 26 27 71 72 92 93 94 95 106 109
    error (256)
    TOKEN_PRINT <string> (258) 69
    TOKEN_DINT <string> (259) 165
    TOKEN_DFLOAT <string> (260) 166
    TOKEN_DBYTE <string> (261)
    TOKEN_DSHORT <string> (262)
    TOKEN_DLONG <string> (263)
    TOKEN_DDOUBLE <string> (264) 167
    TOKEN_DSTRING <string> (265) 154 155 156 168
    TOKEN_UNSIGNED_INTEGER <string> (266) 158
    TOKEN_REAL <string> (267) 161
    TOKEN_REAL_FLOAT <string> (268) 160
    TOKEN_STRING <string> (269) 159
    TOKEN_IDENTIFIER <string> (270) 37 38 56 57 58 59 60 61 62 63 64 65 66 80 82 84 86 87 88 89 110 111 140 141 142 143 148 172 173 178 183 184 187 190
    TOKEN_TRUE <string> (271) 163
    TOKEN_FALSE <string> (272) 164
    TOKEN_DBOOLEAN <string> (273) 169
    TOKEN_DCHAR <string> (274) 170
    TOKEN_CHAR_LITERAL <string> (275) 162
    TOKEN_FINAL <string> (276) 84 86 89
    TOKEN_SYSTEM_OUT_PRINTLN <string> (277) 70
    TOKEN_DVOID <string> (278) 171 173
    TOKEN_SHIFT_LEFT (279) 123
    TOKEN_SHIFT_RIGHT (280) 124
    TOKEN_INTEGER_CLASS (281) 151
    TOKEN_DOUBLE_CLASS (282) 152
    TOKEN_FLOAT_CLASS (283) 153
    TOKEN_ARRAYS (284) 150
    TOKEN_PARSE_INT (285) 151
    TOKEN_PARSE_DOUBLE (286) 152
    TOKEN_PARSE_FLOAT (287) 153
    TOKEN_VALUE_OF (288) 154
    TOKEN_JOIN (289) 155 156
    TOKEN_LENGTH (290) 138
    TOKEN_ADD (291) 139
    TOKEN_INDEXOF (292) 150
    TOKEN_PLUS_PLUS (293) 37 142
    TOKEN_MINUS_MINUS (294) 38 143
    TOKEN_PLUS_ASSIGN (295) 57
    TOKEN_MINUS_ASSIGN (296) 58
    TOKEN_MUL_ASSIGN (297) 59
    TOKEN_DIV_ASSIGN (298) 60
    TOKEN_MOD_ASSIGN (299) 61
    TOKEN_AND_ASSIGN (300) 62
    TOKEN_OR_ASSIGN (301) 63
    TOKEN_XOR_ASSIGN (302) 64
    TOKEN_SHL_ASSIGN (303) 65
    TOKEN_SHR_ASSIGN (304) 66
    TOKEN_EQUAL (305) 125
    TOKEN_NOT_EQUAL (306) 126
    TOKEN_GREATER (307) 127
    TOKEN_LESS (308) 128
    TOKEN_GREATER_EQUAL (309) 129
    TOKEN_LESS_EQUAL (310) 130
    TOKEN_AND (311) 131
    TOKEN_OR (312) 132
    TOKEN_NOT (313) 133
    TOKEN_IF (314) 20 21 22 23 24 25
    TOKEN_ELSE (315) 21 22 24 25
    TOKEN_SWITCH (316) 26 27
    TOKEN_CASE (317) 41 42
    TOKEN_DEFAULT (318) 49 50
    TOKEN_BREAK (319) 42 50 51
    TOKEN_WHILE (320) 28 29
    TOKEN_FOR (321) 30 31 32 33 34 35 187
    TOKEN_CONTINUE (322) 52
    TOKEN_NEW (323) 91
    TOKEN_RETURN (324) 185 186
    TOKEN_PUBLIC (325) 173
    TOKEN_STATIC (326) 173
    NEG (327)
    CAST (328)


No terminales con las reglas donde aparecen

    $accept (93)
        on left: 0
    s <nodo> (94)
        on left: 1
        on right: 0
    lSentencia <nodo> (95)
        on left: 2 3
        on right: 1 2 71 72
    instruccion <nodo> (96)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 2 3
    if_statement <nodo> (97)
        on left: 20 21 22 23 24 25
        on right: 4 22 25
    switch_statement <nodo> (98)
        on left: 26 27
        on right: 5
    while_statement <nodo> (99)
        on left: 28 29
        on right: 7
    for_statement <nodo> (100)
        on left: 30 31 32 33 34 35
        on right: 8
    incremento <nodo> (101)
        on left: 36 37 38
        on right: 30 31 34 35
    case_list <nodo> (102)
        on left: 39 40
        on right: 26 27 40
    case_item <nodo> (103)
        on left: 41 42
        on right: 39 40
    instrucciones_case <nodo> (104)
        on left: 43 44
        on right: 41 42 44 49 50
    instruccion_case <nodo> (105)
        on left: 45 46 47 48
        on right: 43 44
    default_case <nodo> (106)
        on left: 49 50
        on right: 27
    break_statement <nodo> (107)
        on left: 51
        on right: 6
    continue_statement <nodo> (108)
        on left: 52
        on right: 19
    instruccion_simple <nodo> (109)
        on left: 53 54 55
        on right: 23 24 25 29 31 33 35
    asignacion <nodo> (110)
        on left: 56 57 58 59 60 61 62 63 64 65 66
        on right: 16 34 35 36 48 55
    lista_Expr <nodo> (111)
        on left: 67 68
        on right: 67 69 70 92 109 157 189
    imprimir <nodo> (112)
        on left: 69 70
        on right: 10 45 53
    bloque <nodo> (113)
        on left: 71
        on right: 11 20 21 22 24 28 34 46 172 173 187
    bloque_for <nodo> (114)
        on left: 72
        on right: 30 32
    declaracion_var <nodo> (115)
        on left: 73 74 75 76 77 78
        on right: 12 30 31 32 33 47 54
    prefix_array_decl <nodo> (116)
        on left: 80
        on right: 73
    $@1 (117)
        on left: 79
        on right: 80
    postfix_array_decl <nodo> (118)
        on left: 82
        on right: 74
    $@2 (119)
        on left: 81
        on right: 82
    final_prefix_array_decl <nodo> (120)
        on left: 84
        on right: 75
    $@3 (121)
        on left: 83
        on right: 84
    final_postfix_array_decl <nodo> (122)
        on left: 86
        on right: 76
    $@4 (123)
        on left: 85
        on right: 86
    var_decl <nodo> (124)
        on left: 87 88
        on right: 77
    final_var_decl <nodo> (125)
        on left: 89
        on right: 78
    array_prefix_init_opt <nodo> (126)
        on left: 90 91 92 93 94 95 96
        on right: 80 84 97
    array_postfix_init_opt <nodo> (127)
        on left: 97
        on right: 82 86
    prefix_dims <boolean> (128)
        on left: 98 99
        on right: 80 84 99
    postfix_dims <boolean> (129)
        on left: 100 101
        on right: 82 86 101
    dims_expr_list <nodo> (130)
        on left: 102 103
        on right: 91 103
    lista_bloques2D <nodo> (131)
        on left: 104 105
        on right: 94 105
    bloque2D <nodo> (132)
        on left: 106
        on right: 104 105
    filas_lista <nodo> (133)
        on left: 107 108
        on right: 93 106 108
    fila_matriz <nodo> (134)
        on left: 109
        on right: 107 108
    asignacion_elemento <nodo> (135)
        on left: 110 111
        on right: 17
    indices_una <nodo> (136)
        on left: 112
        on right: 110 113 114
    indices_multi <nodo> (137)
        on left: 113 114
        on right: 111 114
    expr <nodo> (138)
        on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135
        on right: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 41 42 56 57 58 59 60 61 62 63 64 65 66 67 68 87 89 96 102 103 110 111 112 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 137 139 140 147 150 151 152 153 154 155 156 157 186
    postfix <nodo> (139)
        on left: 136 137 138 139 140 141 142 143
        on right: 18 135 137 138 139 140 141
    unary <nodo> (140)
        on left: 144 145
        on right: 136 145
    atom <nodo> (141)
        on left: 146 147 148 149 150 151 152 153 154 155 156
        on right: 144
    join_variadic_args <nodo> (142)
        on left: 157
        on right: 156
    primitivo <nodo> (143)
        on left: 158 159 160 161 162 163 164
        on right: 146
    tipoPrimitivo <tipoDato> (144)
        on left: 165 166 167 168 169 170 171
        on right: 80 82 84 86 87 88 89 91 145 172 178 183 184 187
    funcion_declaracion <nodo> (145)
        on left: 172
        on right: 13
    main_declaracion <nodo> (146)
        on left: 173
        on right: 14
    main_params_opt (147)
        on left: 174 175
        on right: 173
    main_params (148)
        on left: 176 177
        on right: 175 177
    main_param (149)
        on left: 178
        on right: 176 177
    main_param_array_brackets (150)
        on left: 179 180
        on right: 178 180
    param_opt <paramList> (151)
        on left: 181 182
        on right: 172
    lista_parametros <paramList> (152)
        on left: 183 184
        on right: 182 184
    return_stmt <nodo> (153)
        on left: 185 186
        on right: 15
    for_each_statement <nodo> (154)
        on left: 187
        on right: 9
    argumentos_opt <nodo> (155)
        on left: 188 189
        on right: 190
    llamada_funcion <nodo> (156)
        on left: 190
        on right: 149


Estado 0

    0 $accept: • s $end

    TOKEN_PRINT               desplazar e ir al estado 1
    TOKEN_DINT                desplazar e ir al estado 2
    TOKEN_DFLOAT              desplazar e ir al estado 3
    TOKEN_DDOUBLE             desplazar e ir al estado 4
    TOKEN_DSTRING             desplazar e ir al estado 5
    TOKEN_UNSIGNED_INTEGER    desplazar e ir al estado 6
    TOKEN_REAL                desplazar e ir al estado 7
    TOKEN_REAL_FLOAT          desplazar e ir al estado 8
    TOKEN_STRING              desplazar e ir al estado 9
    TOKEN_IDENTIFIER          desplazar e ir al estado 10
    TOKEN_TRUE                desplazar e ir al estado 11
    TOKEN_FALSE               desplazar e ir al estado 12
    TOKEN_DBOOLEAN            desplazar e ir al estado 13
    TOKEN_DCHAR               desplazar e ir al estado 14
    TOKEN_CHAR_LITERAL        desplazar e ir al estado 15
    TOKEN_FINAL               desplazar e ir al estado 16
    TOKEN_SYSTEM_OUT_PRINTLN  desplazar e ir al estado 17
    TOKEN_DVOID               desplazar e ir al estado 18
    TOKEN_INTEGER_CLASS       desplazar e ir al estado 19
    TOKEN_DOUBLE_CLASS        desplazar e ir al estado 20
    TOKEN_FLOAT_CLASS         desplazar e ir al estado 21
    TOKEN_ARRAYS              desplazar e ir al estado 22
    TOKEN_IF                  desplazar e ir al estado 23
    TOKEN_SWITCH              desplazar e ir al estado 24
    TOKEN_BREAK               desplazar e ir al estado 25
    TOKEN_WHILE               desplazar e ir al estado 26
    TOKEN_FOR                 desplazar e ir al estado 27
    TOKEN_CONTINUE            desplazar e ir al estado 28
    TOKEN_RETURN              desplazar e ir al estado 29
    TOKEN_PUBLIC              desplazar e ir al estado 30
    '('                       desplazar e ir al estado 31
    '{'                       desplazar e ir al estado 32

    s                         ir al estado 33
    lSentencia                ir al estado 34
    instruccion               ir al estado 35
    if_statement              ir al estado 36
    switch_statement          ir al estado 37
    while_statement           ir al estado 38
    for_statement             ir al estado 39
    break_statement           ir al estado 40
    continue_statement        ir al estado 41
    asignacion                ir al estado 42
    imprimir                  ir al estado 43
    bloque                    ir al estado 44
    declaracion_var           ir al estado 45
    prefix_array_decl         ir al estado 46
    postfix_array_decl        ir al estado 47
    final_prefix_array_decl   ir al estado 48
    final_postfix_array_decl  ir al estado 49
    var_decl                  ir al estado 50
    final_var_decl            ir al estado 51
    asignacion_elemento       ir al estado 52
    postfix                   ir al estado 53
    unary                     ir al estado 54
    atom                      ir al estado 55
    primitivo                 ir al estado 56
    tipoPrimitivo             ir al estado 57
    funcion_declaracion       ir al estado 58
    main_declaracion          ir al estado 59
    return_stmt               ir al estado 60
    for_each_statement        ir al estado 61
    llamada_funcion           ir al estado 62


Estado 1

   69 imprimir: TOKEN_PRINT • '(' lista_Expr ')'

    '('  desplazar e ir al estado 63


Estado 2

  165 tipoPrimitivo: TOKEN_DINT •

    $default  reduce usando la regla 165 (tipoPrimitivo)


Estado 3

  166 tipoPrimitivo: TOKEN_DFLOAT •

    $default  reduce usando la regla 166 (tipoPrimitivo)


Estado 4

  167 tipoPrimitivo: TOKEN_DDOUBLE •

    $default  reduce usando la regla 167 (tipoPrimitivo)


Estado 5

  154 atom: TOKEN_DSTRING • '.' TOKEN_VALUE_OF '(' expr ')'
  155     | TOKEN_DSTRING • '.' TOKEN_JOIN '(' expr ',' expr ')'
  156     | TOKEN_DSTRING • '.' TOKEN_JOIN '(' expr ',' join_variadic_args ')'
  168 tipoPrimitivo: TOKEN_DSTRING •

    '.'  desplazar e ir al estado 64

    $default  reduce usando la regla 168 (tipoPrimitivo)


Estado 6

  158 primitivo: TOKEN_UNSIGNED_INTEGER •

    $default  reduce usando la regla 158 (primitivo)


Estado 7

  161 primitivo: TOKEN_REAL •

    $default  reduce usando la regla 161 (primitivo)


Estado 8

  160 primitivo: TOKEN_REAL_FLOAT •

    $default  reduce usando la regla 160 (primitivo)


Estado 9

  159 primitivo: TOKEN_STRING •

    $default  reduce usando la regla 159 (primitivo)


Estado 10

   56 asignacion: TOKEN_IDENTIFIER • '=' expr
   57           | TOKEN_IDENTIFIER • TOKEN_PLUS_ASSIGN expr
   58           | TOKEN_IDENTIFIER • TOKEN_MINUS_ASSIGN expr
   59           | TOKEN_IDENTIFIER • TOKEN_MUL_ASSIGN expr
   60           | TOKEN_IDENTIFIER • TOKEN_DIV_ASSIGN expr
   61           | TOKEN_IDENTIFIER • TOKEN_MOD_ASSIGN expr
   62           | TOKEN_IDENTIFIER • TOKEN_AND_ASSIGN expr
   63           | TOKEN_IDENTIFIER • TOKEN_OR_ASSIGN expr
   64           | TOKEN_IDENTIFIER • TOKEN_XOR_ASSIGN expr
   65           | TOKEN_IDENTIFIER • TOKEN_SHL_ASSIGN expr
   66           | TOKEN_IDENTIFIER • TOKEN_SHR_ASSIGN expr
  110 asignacion_elemento: TOKEN_IDENTIFIER • indices_una '=' expr
  111                    | TOKEN_IDENTIFIER • indices_multi '=' expr
  142 postfix: TOKEN_IDENTIFIER • TOKEN_PLUS_PLUS
  143        | TOKEN_IDENTIFIER • TOKEN_MINUS_MINUS
  148 atom: TOKEN_IDENTIFIER •
  190 llamada_funcion: TOKEN_IDENTIFIER • '(' argumentos_opt ')'

    TOKEN_PLUS_PLUS     desplazar e ir al estado 65
    TOKEN_MINUS_MINUS   desplazar e ir al estado 66
    TOKEN_PLUS_ASSIGN   desplazar e ir al estado 67
    TOKEN_MINUS_ASSIGN  desplazar e ir al estado 68
    TOKEN_MUL_ASSIGN    desplazar e ir al estado 69
    TOKEN_DIV_ASSIGN    desplazar e ir al estado 70
    TOKEN_MOD_ASSIGN    desplazar e ir al estado 71
    TOKEN_AND_ASSIGN    desplazar e ir al estado 72
    TOKEN_OR_ASSIGN     desplazar e ir al estado 73
    TOKEN_XOR_ASSIGN    desplazar e ir al estado 74
    TOKEN_SHL_ASSIGN    desplazar e ir al estado 75
    TOKEN_SHR_ASSIGN    desplazar e ir al estado 76
    '('                 desplazar e ir al estado 77
    '='                 desplazar e ir al estado 78
    '['                 desplazar e ir al estado 79

    '['       [reduce usando la regla 148 (atom)]
    $default  reduce usando la regla 148 (atom)

    indices_una    ir al estado 80
    indices_multi  ir al estado 81


Estado 11

  163 primitivo: TOKEN_TRUE •

    $default  reduce usando la regla 163 (primitivo)


Estado 12

  164 primitivo: TOKEN_FALSE •

    $default  reduce usando la regla 164 (primitivo)


Estado 13

  169 tipoPrimitivo: TOKEN_DBOOLEAN •

    $default  reduce usando la regla 169 (tipoPrimitivo)


Estado 14

  170 tipoPrimitivo: TOKEN_DCHAR •

    $default  reduce usando la regla 170 (tipoPrimitivo)


Estado 15

  162 primitivo: TOKEN_CHAR_LITERAL •

    $default  reduce usando la regla 162 (primitivo)


Estado 16

   84 final_prefix_array_decl: TOKEN_FINAL • tipoPrimitivo prefix_dims TOKEN_IDENTIFIER $@3 array_prefix_init_opt
   86 final_postfix_array_decl: TOKEN_FINAL • tipoPrimitivo TOKEN_IDENTIFIER postfix_dims $@4 array_postfix_init_opt
   89 final_var_decl: TOKEN_FINAL • tipoPrimitivo TOKEN_IDENTIFIER '=' expr

    TOKEN_DINT      desplazar e ir al estado 2
    TOKEN_DFLOAT    desplazar e ir al estado 3
    TOKEN_DDOUBLE   desplazar e ir al estado 4
    TOKEN_DSTRING   desplazar e ir al estado 82
    TOKEN_DBOOLEAN  desplazar e ir al estado 13
    TOKEN_DCHAR     desplazar e ir al estado 14
    TOKEN_DVOID     desplazar e ir al estado 18

    tipoPrimitivo  ir al estado 83


Estado 17

   70 imprimir: TOKEN_SYSTEM_OUT_PRINTLN • '(' lista_Expr ')'

    '('  desplazar e ir al estado 84


Estado 18

  171 tipoPrimitivo: TOKEN_DVOID •

    $default  reduce usando la regla 171 (tipoPrimitivo)


Estado 19

  151 atom: TOKEN_INTEGER_CLASS • '.' TOKEN_PARSE_INT '(' expr ')'

    '.'  desplazar e ir al estado 85


Estado 20

  152 atom: TOKEN_DOUBLE_CLASS • '.' TOKEN_PARSE_DOUBLE '(' expr ')'

    '.'  desplazar e ir al estado 86


Estado 21

  153 atom: TOKEN_FLOAT_CLASS • '.' TOKEN_PARSE_FLOAT '(' expr ')'

    '.'  desplazar e ir al estado 87


Estado 22

  150 atom: TOKEN_ARRAYS • '.' TOKEN_INDEXOF '(' expr ',' expr ')'

    '.'  desplazar e ir al estado 88


Estado 23

   20 if_statement: TOKEN_IF • '(' expr ')' bloque
   21             | TOKEN_IF • '(' expr ')' bloque TOKEN_ELSE bloque
   22             | TOKEN_IF • '(' expr ')' bloque TOKEN_ELSE if_statement
   23             | TOKEN_IF • '(' expr ')' instruccion_simple ';'
   24             | TOKEN_IF • '(' expr ')' instruccion_simple ';' TOKEN_ELSE bloque
   25             | TOKEN_IF • '(' expr ')' instruccion_simple ';' TOKEN_ELSE if_statement

    '('  desplazar e ir al estado 89


Estado 24

   26 switch_statement: TOKEN_SWITCH • '(' expr ')' '{' case_list '}'
   27                 | TOKEN_SWITCH • '(' expr ')' '{' case_list default_case '}'

    '('  desplazar e ir al estado 90


Estado 25

   51 break_statement: TOKEN_BREAK • ';'

    ';'  desplazar e ir al estado 91


Estado 26

   28 while_statement: TOKEN_WHILE • '(' expr ')' bloque
   29                | TOKEN_WHILE • '(' expr ')' instruccion_simple

    '('  desplazar e ir al estado 92


Estado 27

   30 for_statement: TOKEN_FOR • '(' declaracion_var ';' expr ';' incremento ')' bloque_for
   31              | TOKEN_FOR • '(' declaracion_var ';' expr ';' incremento ')' instruccion_simple
   32              | TOKEN_FOR • '(' declaracion_var ';' expr ';' ')' bloque_for
   33              | TOKEN_FOR • '(' declaracion_var ';' expr ';' ')' instruccion_simple
   34              | TOKEN_FOR • '(' asignacion ';' expr ';' incremento ')' bloque
   35              | TOKEN_FOR • '(' asignacion ';' expr ';' incremento ')' instruccion_simple
  187 for_each_statement: TOKEN_FOR • '(' tipoPrimitivo TOKEN_IDENTIFIER ':' TOKEN_IDENTIFIER ')' bloque

    '('  desplazar e ir al estado 93


Estado 28

   52 continue_statement: TOKEN_CONTINUE • ';'

    ';'  desplazar e ir al estado 94


Estado 29

  185 return_stmt: TOKEN_RETURN •
  186            | TOKEN_RETURN • expr

    TOKEN_DSTRING           desplazar e ir al estado 95
    TOKEN_UNSIGNED_INTEGER  desplazar e ir al estado 6
    TOKEN_REAL              desplazar e ir al estado 7
    TOKEN_REAL_FLOAT        desplazar e ir al estado 8
    TOKEN_STRING            desplazar e ir al estado 9
    TOKEN_IDENTIFIER        desplazar e ir al estado 96
    TOKEN_TRUE              desplazar e ir al estado 11
    TOKEN_FALSE             desplazar e ir al estado 12
    TOKEN_CHAR_LITERAL      desplazar e ir al estado 15
    TOKEN_INTEGER_CLASS     desplazar e ir al estado 19
    TOKEN_DOUBLE_CLASS      desplazar e ir al estado 20
    TOKEN_FLOAT_CLASS       desplazar e ir al estado 21
    TOKEN_ARRAYS            desplazar e ir al estado 22
    TOKEN_NOT               desplazar e ir al estado 97
    '-'                     desplazar e ir al estado 98
    '('                     desplazar e ir al estado 31

    $default  reduce usando la regla 185 (return_stmt)

    expr             ir al estado 99
    postfix          ir al estado 100
    unary            ir al estado 54
    atom             ir al estado 55
    primitivo        ir al estado 56
    llamada_funcion  ir al estado 62


Estado 30

  173 main_declaracion: TOKEN_PUBLIC • TOKEN_STATIC TOKEN_DVOID TOKEN_IDENTIFIER '(' main_params_opt ')' bloque

    TOKEN_STATIC  desplazar e ir al estado 101


Estado 31

  145 unary: '(' • tipoPrimitivo ')' unary
  147 atom: '(' • expr ')'
